<resources>
    <string name="app_name" translatable="false">PizzaHut Booking</string>
    <string name="nav_home">Home</string>
    <string name="nav_order">Order</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_account">Account</string>
    <string name="order_title">For Ordering</string>
    <string name="notification_title">Notification</string>
    <string name="account_home">Your Account</string>
    <string name="appertizers_title">Appertizers</string>
    <string name="salad_title">Salad</string>
    <string name="soup_title">Soup</string>
    <string name="spagetti_title">Spaghetti &amp; Rice</string>
    <string name="drink_title">Drink</string>
    <string name="order_for">order for</string>
    <string name="order_summary">Order summary</string>
    <string name="add_items">Add items</string>
    <string name="subtotal">Subtotal</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="about_this_meal">About this meal</string>
    <string name="special_introductions">Special Introductions</string>
    <string name="e.g">E.g. No onions, please.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="update_item">Update Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="remove_alter_title">Are you sure to remove this item?</string>
    <string name="remove_alter_content">After confirm this action. The item would be removed from list cart.</string>
    <string name="confirm_cart_alter_title">Need to Confirm Cart?</string>
    <string name="confirm_cart_alter_content">Please go to cart and confirm the orders</string>
    <string name="mark_read_all">Mark as read them all</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="all">All</string>
    <string name="watched">Watched</string>
    <string name="watching">Watching</string>
    <string name="ordered">Ordered</string>
    <string name="removed">Removed</string>
    <string name="your_profile">Your Profile</string>
    <string name="settings">Settings</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="about_this_app">About this app</string>
    <string name="log_out">Log Out</string>
    <string name="manger_permission">Manager\'s Permission!</string>
    <string name="manager_permission_content">You have no permission to do it! Action require Manager\'s account.</string>
    <string name="cant_access_table">Can\'t access this table!</string>
    <string name="cant_access_table_content">This table is a by someone. Please access later!</string>
    <string name="wrong_password">Wrong password</string>
    <string name="no_user_exist">No such User exists</string>
    <string name="filed_not_empty">Field cannot be empty</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_login">Please login</string>
    <string name="has_ordered">has ordered</string>
    <string name="forr">for</string>
    <string name="has_removed">has removed</string>
    <string name="from">from</string>
</resources>
