<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:layout_height="match_parent"
    tools:context=".Activity.MealView">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_meal"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_margin="5dp"
                    android:id="@+id/btn_back_menu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:civ_border_color="#B5B3B3"
                    android:background="#72B5B3B3"
                    app:civ_border_width="1dp"
                    android:src="@drawable/ic_baseline_clear_24"
                    app:layout_constraintTop_toTopOf="@+id/img_meal"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:id="@+id/txt_mealName"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="left"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/text_mealPrice"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="right"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/colorDivider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_this_meal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="10dp"
                android:id="@+id/txt_aboutThisMeal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_description"
                android:padding="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/special_introductions"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e.g"
                android:padding="10dp"
                android:id="@+id/edt_note"
                android:textColorHighlight="@color/colorPrimary"
                android:layout_margin="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="20dp"
                >

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="-"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:id="@+id/btn_minus"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="35sp"
                    android:id="@+id/txt_count"
                    android:layout_marginHorizontal="20dp"
                    />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="+"
                    android:id="@+id/btn_plus"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp"
                    android:background="@drawable/custom_button"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/btn_add"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorBackground"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>